--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             <h1>Titulo do Site</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de CSS e HTML</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quaerat obcaecati dolores enim sequi minima, incidunt officia optio modi expedita? Vel, soluta! Asperiores soluta enim numquam? Ipsa excepturi veniam asperiores!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de Java Script</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio architecto veniam ipsam molestias hic iste incidunt eos cupiditate quod praesentium, quae ratione itaque excepturi asperiores quam consequatur vero tempore voluptatem!</p>
         </article>
 
     </main>
